# cmake_exercise

./: CMakeLists.txt  cTestConfig.h.in  cmakeTest.cpp
tools/: CMakeLists.txt  myTool.cpp  myTool.h  stringtool.cpp  stringtool.h
